tests/fixtures/pass/method-parameter.php
<?php

namespace Chaozhuo\Helper;

use winwin\winner\fixtures\Bar;

class Foo
{
    public function foo(Bar $bar)
    {
    }
}
