tests/fixtures/fail/method-annotation.php
<?php
namespace Chaozhuo\Helper;

class Foo
{
    /**
     * @Bar
     */
    function foo()
    {
    }
}